# ShadowScribe

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  CONVERSION_COMPLETE.md  Dockerfile  Dockerfile.cloudrun  INTENT_BASED_ROUTING_SYSTEM.md  README.md  README_WEB.md  SCHEMA_OPTIMIZATION_PROPOSALS.md  ShadowScribe_Fixes.md  ShadowScribe_Implementation_Guide.md  ShadowScribe_LLM_Engine_Design.md  WARP.md  WEBAPP_CONVERSION_PLAN.md  chunks_output.json  config.ini  demo.py  demo_central_engine.py  diagnostic_test.py  dnd_rag_chunker.py  docker-compose.yml  enhanced_diagnostic.py  final_system_test.py  interactive_shadowscribe.py  main.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements-cloudrun.txt  requirements-web.txt  requirements.txt  setup.sh  shadowscribe_debug.txt  tailwind.config.js  test_character_handler.py  test_chunker.py  test_converted_router.py  (+16 more)
.Jules/: palette.md
.claude/: settings.local.json
.github/: copilot-instructions.md
.jules/: bolt.md  sentinel.md
.warp/: rules.md
574-Assignment/: SENTENCE_TRANSFORMER_RAG_STUDY.md
api/: Dockerfile  auth.py  config.py  main.py
context_detector/: __init__.py  evaluate.py  plan.txt  zero_shot.py
frontend/: .env.local.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend-src/: App.tsx  index.css  index.html  test-setup.ts
knowledge_base/: action_list.json  dnd5e_srd_full.json  dnd5e_srd_query_helper.json
query_rewriter_tests/: README.md  query_rewriter.py  quick_test.py  run_tests.py  setup_model.py  test_pairs.py
(+346 files in other folders)
